refactoring of file service